--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
   },
