--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@tanstack/react-query": "^5.12.2",
     "antd": "^5.12.1",
+    "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
