--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@aws-sdk/client-s3": "^3.481.0",
     "@tanstack/react-query": "^5.12.2",
     "antd": "^5.12.1",
     "axios": "^1.6.2",
@@ -19,6 +20,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.20.1",
     "zustand": "^4.4.7"
   },
